# mekabot-m3

./: .gitignore  CMakeLists.txt
holomni_pcv/: .gitignore  .travis.yml  CMakeLists.txt  README.md
holomni_pcv/doc/: pcv_data_flow_map.odg
holomni_pcv/pcv_config/: pcv_meka_b1r1.yml  pcv_nomadic_xr4000.yml
holomni_pcv/src/: CMakeLists.txt  Caster.cpp  Ctrl.cpp  Filter.cpp  Filter.h  Home.cpp  PCV_State.cpp  Params.h  Pcv.cpp  Status.h  Traj3.cpp  Traj3.h  Vehicle.cpp  pcv_test.cpp
holomni_pcv/src/matrix/: PrMatrix.cpp  PrMatrix.h  PrVector.cpp
install/include/holomni-pcv/: Caster.h  Command.h  Ctrl.h  Home.h  Motion.h  PCV_State.h  Pcv.h  PrGlobalDefn.h  Vehicle.h
install/share/: setup.bash
m3core/: .travis.yml  CMakeLists.txt  README.md
m3core/python/: CMakeLists.txt  setup.py.in
m3core/python/m3/: component.py  component_factory.py  gui.py  m3rt_toolbox.py  monitor.py  rt_proxy.py  toolbox_core.py  widgets.py
m3core/python/scripts/: CMakeLists.txt
m3core/python/scripts/m3rt/: m3rt_check_server.py.in  m3rt_server.py
m3core/ros/m3_msgs/: CMakeLists.txt  package.xml
m3core/scripts/: CMakeLists.txt  m3rt_insmods.in  m3rt_server_debug  m3rt_server_kill  m3rt_server_run.in  ros_setup.sh  uninstall_m3.in
m3core/src/m3rt/base/: CMakeLists.txt  component.cpp  component_async.cpp  component_async.h  component_base.proto  component_ec.cpp  component_ec.h  component_factory.cpp  component_factory.h  component_shm.cpp  component_shm.h  simple_server.cpp  simple_server.h  toolbox.cpp  toolbox.h
m3core/src/m3rt/ethercat/: CMakeLists.txt  Kbuild.in  m3ec.c  run  runinfo
m3core/src/m3rt/rt_system/: CMakeLists.txt  m3rt_system.i  rt_data_service.cpp  rt_data_service.h  rt_log_service.cpp  rt_log_service.h  rt_ros_service.cpp  rt_ros_service.h  rt_service.cpp  rt_service.h  rt_system.cpp  rt_system.h
m3ens/: README.md
m3meka/: .travis.yml  CMakeLists.txt  README.md  setup.bash.in
m3meka/ikfast_config/: m3_a2r2_right.robot.xml  m3ens_a2r4.robot.xml  m3ens_a2r4_right.kinbody.xml
m3meka/python/: CMakeLists.txt  setup.py.in
m3meka/python/m3/: actuator.py  head_s2csp_ctrl.py  humanoid.py  joint.py  joint_array.py  led_matrix_ec.py  m3meka_factory_proxy.py  m3recorder.py  nanokontrol.py  omnibase.py  toolbox.py  toolbox_head_s2.py  toolbox_ros.py  viz.py
m3meka/python/scripts/: CMakeLists.txt
m3meka/python/scripts/demo/: m3_demo_arm_velocity_control.py  m3_demo_ik_delta.py
m3meka/python/scripts/dev/: m3dev_joint_tuning.py
m3meka/python/scripts/m3qa/: calibrate.py  calibrate_actuator_ec_a1r1.py  calibrate_actuator_ec_r1.py  calibrate_actuator_ec_r2.py  calibrate_actuator_ec_r3.py  calibrate_actuator_ec_r4.py  calibrate_arm_a1r1.py  calibrate_arm_a2r1.py  calibrate_arm_a2r2.py  calibrate_arm_a2r3.py  calibrate_arm_a2r4.py  calibrate_base_b1r1.py  calibrate_gripper_g1r1.py  calibrate_hand_h2r1.py  calibrate_hand_h2r2.py  calibrate_hand_h2r3.py  calibrate_hand_h2r4.py  calibrate_head_s2r1.py  calibrate_head_s2r2.py  calibrate_load_cell.py  calibrate_pwr.py  calibrate_sensors.py  calibrate_torso_t1r1.py  calibrate_torso_t2r1.py  calibrate_torso_t2r2.py  calibrate_torso_t2r3.py
m3meka/python/scripts/tools/: m3qa_batch_torque_zero.py
m3meka/ros/m3ctrl_msgs/: CMakeLists.txt  package.xml
m3meka/ros/m3ctrl_msgs/msg/: M3JointCmd.msg
m3meka/ros/m3meka_msgs/: CMakeLists.txt  package.xml
m3meka/ros/shm_omnibase_controller/: CMakeLists.txt  package.xml
m3meka/ros/shm_omnibase_controller/cmake/Modules/: FindM3ens.cmake  FindRTAI.cmake  FindYamlCpp.cmake
m3meka/ros/shm_omnibase_controller/src/: drive_base.cpp  shm_omnibase_controller.cpp  shm_truss_vels.cpp
m3meka/scripts/: CMakeLists.txt
m3meka/src/m3/: CMakeLists.txt
m3meka/src/m3/chains/: CMakeLists.txt  dynamatics.cpp  dynamatics.proto  factory_proxy.cpp  hand_ua.cpp  head.cpp  joint_array.cpp  joint_array_mode.proto  joint_chain.cpp
m3meka/src/m3/hardware/: CMakeLists.txt  actuator.cpp  actuator.proto  actuator_ec.cpp  actuator_ec.proto  actuator_virtual.cpp  async_io.cpp  ctrl_simple.cpp  ctrl_simple.h  factory_proxy.cpp  joint.cpp  joint.h  joint.proto  joint_mode_ros.proto  joint_slave.cpp  joint_virtual.cpp  joint_zlift.cpp  joint_zlift_shm.cpp  joint_zlift_shm_sds.h  joint_zlift_virtual.cpp  joint_zlift_virtual.h  led_matrix_ec.cpp  led_matrix_ec.h  led_matrix_ec_shm.cpp  ledx2_ec.cpp  ledx2xn_ec.cpp  ledx2xn_ec.h  ledx2xn_ec_shm.cpp  ledx2xn_ec_shm.h  loadx1.cpp  loadx1.h  loadx1_ec.cpp  loadx6.cpp  loadx6_ec.cpp  loadx6_ec.h  log_test.cpp  motor.cpp  motor.h  pwr.cpp  pwr_ec.cpp  (+7 more)
m3meka/src/m3/inverse_kine/: CMakeLists.txt  ik_a1r1_left_wrap.cpp  ik_a1r1_right_wrap.cpp  ik_a2r1_left_wrap.cpp  ik_a2r1_right_wrap.cpp  ik_a2r2_left_wrap.cpp  ik_a2r2_right_wrap.cpp  setup.py.in
m3meka/src/m3/robot_ctrl/: CMakeLists.txt  factory_proxy.cpp  head_s2csp_ctrl.cpp  head_s2csp_ctrl.h
m3meka/src/m3/robots/: CMakeLists.txt  factory_proxy.cpp  haptic_demo.cpp  humanoid.cpp  humanoid.proto  humanoid_shm.cpp  humanoid_shm.h  robot.cpp
m3meka/src/m3/shared_mem/: CMakeLists.txt  comp_shm.cpp  comp_shm.h  factory_proxy.cpp  torque_shm.cpp  torque_shm.h  torque_shm_sds.h
m3meka/src/m3/toolbox/: CMakeLists.txt  dfilter.cpp  factory_proxy.cpp  log.cpp  log.h  monitor.cpp  serial_pdo.cpp  serial_pdo.h  serial_port.cpp  toolbox.cpp  trajectory.cpp  trajectory.h
m3meka/src/m3/vehicles/: CMakeLists.txt  factory_proxy.cpp  omnibase.cpp  omnibase.h  omnibase.proto  omnibase_shm.cpp  omnibase_shm.h  omnibase_shm_sds.h
meka-cmake-modules/Modules/: FindRTAI.cmake  FindYamlCpp.cmake
meka-ros-pkg/m3cameras/: mainpage.dox  manifest.xml
meka-ros-pkg/m3kinect/: CMakeLists.txt  package.xml
meka-ros-pkg/meka_description/: .meka_ros_state.py.swo  .meka_ros_state.py.swp  fake_m3ens_viz.launch  fake_meka_ros_state.py  kinect_top_extrinsics.launch  m3ens.launch  m3ens_shm.launch  m3ens_viz.launch  meka_additional_transforms.launch  meka_ros_state.py
meka-ros-pkg/meka_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
meka-ros-pkg/meka_moveit_config2/: .setup_assistant  CMakeLists.txt  package.xml
(+430 files in other folders)
