<?xml version="1.0"?>
<package>
  <name>m3_msgs</name>
  <version>1.0.0</version>
  <description>
    This is a catkinization of the m3_msgs present on the Meka Robot.
  </description>
  <maintainer email="hoarau.robotics@gmail.com">Antoine Hoarau</maintainer>
  <license>BSD</license>

  <!--url type="website">http://</url-->
  <author>Antoine Hoarau</author>

  <buildtool_depend version_gte="0.5.68">catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <build_depend>rostest</build_depend>
  <build_depend>std_msgs</build_depend>

  <run_depend>message_runtime</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
</package>

