<?xml version="1.0"?>
<package>
  <name>shm_omnibase_controller</name>
  <version>1.0.0</version>
  <description>
    This is a catkinization of the shm_omnibase_controller for the Meka Robot.
  </description>
  <maintainer email="hoarau.robotics@gmail.com">Antoine Hoarau</maintainer>
  <license>BSD</license>

  <!--url type="website">http://</url-->
  <author>Aaron Edsinger, Robby Kelbley, Sachin Chitta, Antoine Hoarau</author>

  <buildtool_depend version_gte="0.5.68">catkin</buildtool_depend>


  <build_depend>rostest</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>rosconsole</build_depend>

  <run_depend>rosconsole</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>tf</run_depend>
</package>

